# steamgifts-bot-rs

./: .deepsource.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  shell.nix
.github/workflows/: rust.yml  spell-fixer.yml
src/: lib.rs  main.rs
src/account/: entry.rs  mod.rs
src/steamgifts_acc/: entry.rs
