[package]
authors = ["Daniel <knightpp@pm.me>"]
description = "Automatically enter giveaways for steamgifts.com"
edition = "2018"
license = "MIT|Apache-2.0"
name = "steamgiftsbot"
readme = "README.md"
version = "0.5.1"
resolver = "2"

[lib]
path = "src/lib.rs"
[[bin]]
name = "steamgiftsbot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
console = "0.15"
humantime = "2.1"
scraper = "0.12"
thiserror = "1.0"
tide = "0.16"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.10", features = ["attributes"] }
simplelog = "0.10"
log = "0.4"
surf = "2.3"

[profile.release]
codegen-units = 1
lto = true
