[package]
authors = ["Daniel <knightpp@pm.me>"]
description = "Automatically enter giveaways for steamgifts.com"
edition = "2021"
license = "MIT|Apache-2.0"
name = "steamgiftsbot"
readme = "README.md"
version = "0.6.0"

[lib]
path = "src/lib.rs"
[[bin]]
name = "steamgiftsbot"
path = "src/main.rs"

[features]
default = []
profile = ["pprof"]

[dependencies]
anyhow = "1.0"
console = "0.15"
humantime = "2.1"
scraper = "0.12"
thiserror = "1.0"
tide = "0.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
async-std = { version = "1.10", default-features = false, features = [
	"attributes",
] }
simplelog = "0.10"
log = "0.4"
surf = { version = "2.3", default-features = false, features = [
	"h1-client-rustls",
] }

pprof = { version = "0.6", features = ["protobuf"], optional = true }

[profile.dev]
debug = false
[profile.release]
debug = false
codegen-units = 1
lto = true
